<resources>
    <string name="app_name">Todo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="new_user">New User?</string>
    <string name="register_here">Register Here</string>
    <string name="register">Register</string>
</resources>